--- a/client/index.html
+++ b/client/index.html
@@ -9,8 +9,20 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    <script src="https://accounts.google.com/gsi/client" async defer></script>
+    <script>
+      window.handleGsi = (res) => {
+        window.dispatchEvent(new CustomEvent('gsi-token', { detail: res.credential }));
+      };
+    </script>
+
   </head>
   <body>
+    <div id="g_id_onload"
+      data-client_id="%VITE_GOOGLE_CLIENT_ID%"
+      data-callback="handleGsi"
+      data-auto_prompt="false"></div>
+    <div class="g_id_signin" data-type="standard"></div>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
