chore: add Google Search Console verification meta tag no index.html

--- a/client/index.html
+++ b/client/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
     <title>VOU EM PROVAS - Dashboard Interno</title>
     <meta name="description" content="Dashboard interno para gestão de eventos e provas da Casapleta Filmes" />
+    <meta name="google-site-verification" content="Q23G8llaKI4Sf9lZ1Zmz0mVLb7xxYEI5XEo5B0fApFQ" />
     <link rel="icon" type="image/png" href="/favicon.png" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
