Update index.html texto VOU EM PROVAS

--- a/client/index.html
+++ b/client/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
-    <title>VOU EM PROVAS - Dashboard Interno</title>
-    <meta name="description" content="Dashboard interno para gestão de eventos e provas da Casapleta Filmes" />
+    <title>VOU EM PROVAS - Solução Interna de Produtividade</title>
+    <meta name="description" content="Tudo sobre provas e atividades da Fazenda, onde e quando quiser. By Casapleta Filmes" />
     <meta name="google-site-verification" content="Q23G8llaKI4Sf9lZ1Zmz0mVLb7xxYEI5XEo5B0fApFQ" />
     <link rel="icon" type="image/png" href="/favicon.png" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
